--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Plugin Css  -->
     
     
-    <script type="module" crossorigin src="/media_prospect/js/main-8cca1c73.js"></script>
-    <link rel="stylesheet" href="/media_prospect/css/index-184d5e66.css">
+    <script type="module" crossorigin src="/media_prospect/js/main-59225f3b.js"></script>
+    <link rel="stylesheet" href="/media_prospect/css/index-53652285.css">
   </head>
   <body class="">
     <header></header>
