--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="shortcut icon"
+      href="/media_prospect/assets/others/favicon-c0df4d75.ico"
+      type="image/x-icon"
+    />
+    <title>Media For Prospects</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,12 +19,39 @@
     <!-- Plugin Css  -->
     
     
-    <script type="module" crossorigin src="/media_prospect/js/main-59225f3b.js"></script>
-    <link rel="stylesheet" href="/media_prospect/css/index-53652285.css">
+    <script type="module" crossorigin src="/media_prospect/js/main-f9a96fb8.js"></script>
+    <link rel="stylesheet" href="/media_prospect/css/index-c77d20c6.css">
   </head>
   <body class="">
-    <header></header>
+    <header class="py-3 bg-primary h-16">
+      <div class="container">
+        <div class="text-center">
+          <a href="index.html" class="inline-block text-white text-3xl"
+            >MediaForProspects</a
+          >
+        </div>
+      </div>
+    </header>
     <main>
+      <section class="hero-area py-12">
+        <div class="container">
+          <div class="hero-content text-center mb-10">
+            <h1 class="text-3xl font-bold text-secondary">
+              Attention Coaches, Consultants and Large Agency Owners: We help
+              you get an endless flow of appointements on autopilot by becoming
+              an authority in your Niche on Youtube.
+            </h1>
+          </div>
+          <video
+            id="video-frame-1"
+            class="video-js mx-auto block"
+            controls
+            poster="/media_prospect/assets/others/poster-1-3baf9c62.avif"
+          >
+            <source src="/media_prospect/assets/others/video-1-268f55b2.mp4" type="video/mp4" />
+          </video>
+        </div>
+      </section>
       <section class="benefits-area relative overflow-hidden pb-16 pt-20">
         <svg
           class="trans-bg absolute w-full start-0 end-0"
@@ -29,18 +61,22 @@
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
         >
-          <path d="M0 32.0208H1366V145H0V32.0208Z" fill="#6499E9"></path>
+          <path d="M0 32.0208H1366V145H0V32.0208Z" fill="#0F2C59"></path>
           <path
             d="M1366 33.2292C1366 51.5811 1060.21 66.4583 683 66.4583C305.79 66.4583 0 51.5811 0 33.2292C0 14.8772 305.79 0 683 0C1060.21 0 1366 14.8772 1366 33.2292Z"
-            fill="#6499E9"
+            fill="#0F2C59"
           ></path>
         </svg>
         <div class="container relative z-10">
           <div class="text-center mb-16">
-            <h2>Why Your Business Needs YouTube?</h2>
+            <h2 class="text-4xl text-primary font-bold mb-3">
+              Why Your Business Needs YouTube?
+            </h2>
           </div>
           <div class="block md:grid md:grid-cols-3 gap-8">
-            <div class="bg-white rounded-xl p-6 shadow-one">
+            <div
+              class="bg-gradient-to-r from-secondary to-tertiary rounded-xl p-7 shadow-one"
+            >
               <div
                 class="bg-primary w-24 h-24 rounded-full inline-flex items-center justify-center mx-auto mb-5"
               >
@@ -61,8 +97,10 @@
                 </svg>
               </div>
               <div>
-                <h4 class="text-primary">Evergreen Effects</h4>
-                <p>
+                <h4 class="text-white font-bold text-3xl mb-4">
+                  Evergreen Effects
+                </h4>
+                <p class="text-white text-lg">
                   Unlike content posted on platforms like Facebook, LinkedIn,
                   Instagram, or Twitter, which tends to fade away within a few
                   hours or days, YouTube offers a distinct advantage. When you
@@ -75,7 +113,9 @@
               </div>
             </div>
             <!-- ./benefit-item -->
-            <div class="bg-white rounded-xl p-6 shadow-one">
+            <div
+              class="bg-gradient-to-r from-secondary to-tertiary rounded-xl p-7 shadow-one"
+            >
               <div
                 class="bg-primary w-24 h-24 rounded-full inline-flex items-center justify-center mx-auto mb-5"
               >
@@ -203,8 +243,10 @@
                 </svg>
               </div>
               <div>
-                <h4 class="text-primary">Evergreen Effects</h4>
-                <p>
+                <h4 class="text-white font-bold text-3xl mb-4">
+                  Evergreen Effects
+                </h4>
+                <p class="text-white text-lg">
                   Unlike content posted on platforms like Facebook, LinkedIn,
                   Instagram, or Twitter, which tends to fade away within a few
                   hours or days, YouTube offers a distinct advantage. When you
@@ -217,7 +259,9 @@
               </div>
             </div>
             <!-- ./benefit-item -->
-            <div class="bg-white rounded-xl p-6 shadow-one">
+            <div
+              class="bg-gradient-to-r from-secondary to-tertiary rounded-xl p-7 shadow-one"
+            >
               <div
                 class="bg-primary w-24 h-24 rounded-full inline-flex items-center justify-center mx-auto mb-5"
               >
@@ -297,8 +341,10 @@
                 </svg>
               </div>
               <div>
-                <h4 class="text-primary">Evergreen Effects</h4>
-                <p>
+                <h4 class="text-white font-bold text-3xl mb-4">
+                  Evergreen Effects
+                </h4>
+                <p class="text-white text-lg">
                   Unlike content posted on platforms like Facebook, LinkedIn,
                   Instagram, or Twitter, which tends to fade away within a few
                   hours or days, YouTube offers a distinct advantage. When you
@@ -328,11 +374,10 @@
             </div>
             <div>
               <video
-                id="video-frame-1"
+                id="video-frame-2"
                 class="video-js"
                 controls
-                poster="MY_VIDEO_POSTER.jpg"
-                data-setup="{}"
+                poster="/media_prospect/assets/others/poster-1-3baf9c62.avif"
               >
                 <source src="/media_prospect/assets/others/video-1-268f55b2.mp4" type="video/mp4" />
               </video>
@@ -340,7 +385,7 @@
           </div>
         </div>
       </section>
-      <section class="testimonial-area py-24 bg-secondary">
+      <section class="testimonial-area py-24 bg-primary">
         <div class="container">
           <div class="grid grid-cols-[1fr_1.5fr] gap-10 items-center">
             <div>
@@ -354,11 +399,10 @@
             </div>
             <div>
               <video
-                id="video-frame-2"
+                id="video-frame-3"
                 class="video-js"
                 controls
-                poster="MY_VIDEO_POSTER.jpg"
-                data-setup="{}"
+                poster="/media_prospect/assets/others/poster-1-3baf9c62.avif"
               >
                 <source src="/media_prospect/assets/others/video-1-268f55b2.mp4" type="video/mp4" />
               </video>
@@ -378,7 +422,7 @@
         </div>
       </section>
     </main>
-    <footer class="py-5 bg-secondary">
+    <footer class="py-5 bg-primary">
       <div class="container">
         <p class="text-center text-white">&copy;Copyright by examplebrand</p>
       </div>
