--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,700&display=swap"
       rel="stylesheet"
     />
-    <!-- Plugin Css  -->
     
-    
-    <script type="module" crossorigin src="/media_prospect/js/main-f9a96fb8.js"></script>
-    <link rel="stylesheet" href="/media_prospect/css/index-c77d20c6.css">
+    <script type="module" crossorigin src="/media_prospect/js/main-33f85286.js"></script>
+    <link rel="stylesheet" href="/media_prospect/css/index-2c233b90.css">
   </head>
   <body class="">
     <header class="py-3 bg-primary h-16">
@@ -43,10 +41,10 @@
             </h1>
           </div>
           <video
-            id="video-frame-1"
-            class="video-js mx-auto block"
+            id="heroPlayer"
+            playsinline
             controls
-            poster="/media_prospect/assets/others/poster-1-3baf9c62.avif"
+            data-poster="./src/images/poster-1.avif"
           >
             <source src="/media_prospect/assets/others/video-1-268f55b2.mp4" type="video/mp4" />
           </video>
@@ -374,10 +372,10 @@
             </div>
             <div>
               <video
-                id="video-frame-2"
-                class="video-js"
+                class="video_player"
+                playsinline
                 controls
-                poster="/media_prospect/assets/others/poster-1-3baf9c62.avif"
+                data-poster="./src/images/poster-1.avif"
               >
                 <source src="/media_prospect/assets/others/video-1-268f55b2.mp4" type="video/mp4" />
               </video>
@@ -399,10 +397,10 @@
             </div>
             <div>
               <video
-                id="video-frame-3"
-                class="video-js"
+                class="video_player"
+                playsinline
                 controls
-                poster="/media_prospect/assets/others/poster-1-3baf9c62.avif"
+                data-poster="./src/images/poster-1.avif"
               >
                 <source src="/media_prospect/assets/others/video-1-268f55b2.mp4" type="video/mp4" />
               </video>
