--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,700&display=swap"
       rel="stylesheet"
     />
+    <!-- Plugin Css -->
     
-    <script type="module" crossorigin src="/media_prospect/js/main-33f85286.js"></script>
-    <link rel="stylesheet" href="/media_prospect/css/index-2c233b90.css">
+    <!-- Main Css -->
+    
+    <script type="module" crossorigin src="/media_prospect/js/main-b1701fa5.js"></script>
+    <link rel="stylesheet" href="/media_prospect/css/index-ccffb918.css">
   </head>
   <body class="">
     <header class="py-3 bg-primary h-16">
