desktop part almost done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,700&display=swap"
       rel="stylesheet"
     />
+    <!-- Plugin Css -->
+    <link rel="stylesheet" href="./src/css/plyr.css" />
+    <!-- Main Css -->
     <link rel="stylesheet" href="./src/css/main.css" />
   </head>
   <body class="">
@@ -42,7 +45,7 @@
             id="heroPlayer"
             playsinline
             controls
-            data-poster="./src/images/poster-1.avif"
+            data-poster="./src/images/poster-1.webp"
           >
             <source src="./src/videos/video-1.mp4" type="video/mp4" />
           </video>
@@ -373,7 +376,7 @@
                 class="video_player"
                 playsinline
                 controls
-                data-poster="./src/images/poster-1.avif"
+                data-poster="./src/images/poster-1.webp"
               >
                 <source src="./src/videos/video-1.mp4" type="video/mp4" />
               </video>
@@ -398,7 +401,7 @@
                 class="video_player"
                 playsinline
                 controls
-                data-poster="./src/images/poster-1.avif"
+                data-poster="./src/images/poster-1.webp"
               >
                 <source src="./src/videos/video-1.mp4" type="video/mp4" />
               </video>
