--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             id="heroPlayer"
             playsinline
             controls
-            data-poster="./src/images/poster-1.avif"
+            data-poster="./src/images/poster-1.webp"
           >
             <source src="/media_prospect/assets/others/video-1-268f55b2.mp4" type="video/mp4" />
           </video>
@@ -378,7 +378,7 @@
                 class="video_player"
                 playsinline
                 controls
-                data-poster="./src/images/poster-1.avif"
+                data-poster="./src/images/poster-1.webp"
               >
                 <source src="/media_prospect/assets/others/video-1-268f55b2.mp4" type="video/mp4" />
               </video>
@@ -403,7 +403,7 @@
                 class="video_player"
                 playsinline
                 controls
-                data-poster="./src/images/poster-1.avif"
+                data-poster="./src/images/poster-1.webp"
               >
                 <source src="/media_prospect/assets/others/video-1-268f55b2.mp4" type="video/mp4" />
               </video>
