--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
     <!-- Main Css -->
     <link rel="stylesheet" href="./src/css/main.css" />
   </head>
-  <body class="">
+  <body>
+    <div
+      id="preloader"
+      class="preloader fixed w-full h-full top-0 end-0 start-0 bottom-0 bg-white z-50 flex items-center justify-center"
+    >
+      <div class="lds-ellipsis">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
     <header class="py-3 bg-primary h-16">
       <div class="container">
         <div class="text-center">
