--- a/index.html
+++ b/index.html
@@ -20,10 +20,21 @@
     
     <!-- Main Css -->
     
-    <script type="module" crossorigin src="/media_prospect/js/main-b1701fa5.js"></script>
-    <link rel="stylesheet" href="/media_prospect/css/index-ccffb918.css">
+    <script type="module" crossorigin src="/media_prospect/js/main-2a9f665f.js"></script>
+    <link rel="stylesheet" href="/media_prospect/css/index-3321ac46.css">
   </head>
-  <body class="">
+  <body>
+    <div
+      id="preloader"
+      class="preloader fixed w-full h-full top-0 end-0 start-0 bottom-0 bg-white z-50 flex items-center justify-center"
+    >
+      <div class="lds-ellipsis">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
     <header class="py-3 bg-primary h-16">
       <div class="container">
         <div class="text-center">
