--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <div></div>
       </div>
     </div>
-    <header class="py-3 bg-primary h-16">
+    <header
+      class="py-3 bg-primary h-16 sticky top-0 w-full left-0 right-0 z-20"
+    >
       <div class="container">
         <div class="text-center">
           <a href="index.html" class="inline-block text-white text-3xl"
@@ -60,6 +62,28 @@
           >
             <source src="./src/videos/video-1.mp4" type="video/mp4" />
           </video>
+          <div class="text-center mt-8">
+            <a
+              href="#calendlyArea"
+              class="inline-flex items-center bg-primary px-4 py-3 text-base text-white cursor-pointer rounded-md uppercase font-bold leading-tight hover:bg-secondary transition duration-200"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                enable-background="new 0 0 24 24"
+                viewBox="0 0 24 24"
+                class="w-5 h-5 mr-2"
+              >
+                <path
+                  fill="#fff"
+                  d="M19,4h-1V3c0-0.6-0.4-1-1-1s-1,0.4-1,1v1H8V3c0-0.6-0.4-1-1-1S6,2.4,6,3v1H5C3.3,4,2,5.3,2,7v1h20V7C22,5.3,20.7,4,19,4z
+                M2,19c0,1.7,1.3,3,3,3h14c1.7,0,3-1.3,3-3v-9H2V19z M17,12c0.6,0,1,0.4,1,1s-0.4,1-1,1s-1-0.4-1-1S16.4,12,17,12z M17,16
+               c0.6,0,1,0.4,1,1s-0.4,1-1,1s-1-0.4-1-1S16.4,16,17,16z M12,12c0.6,0,1,0.4,1,1s-0.4,1-1,1s-1-0.4-1-1S11.4,12,12,12z M12,16
+               c0.6,0,1,0.4,1,1s-0.4,1-1,1s-1-0.4-1-1S11.4,16,12,16z M7,12c0.6,0,1,0.4,1,1s-0.4,1-1,1s-1-0.4-1-1S6.4,12,7,12z M7,16
+               c0.6,0,1,0.4,1,1s-0.4,1-1,1s-1-0.4-1-1S6.4,16,7,16z"
+                ></path>
+              </svg>
+              Book an Appointment</a
+            >
+          </div>
         </div>
       </section>
       <section class="benefits-area relative overflow-hidden pb-16 pt-20">
@@ -420,7 +444,7 @@
           </div>
         </div>
       </section>
-      <section class="calendly-area pt-8 pb-8">
+      <section id="calendlyArea" class="calendly-area pt-8 pb-8">
         <div class="container">
           <!-- Calendly inline widget begin -->
           <div
