--- a/index.html
+++ b/index.html
@@ -39,30 +39,26 @@
     >
       <div class="container">
         <div class="text-center">
-          <a href="index.html" class="inline-block text-white text-3xl"
+          <a
+            href="index.html"
+            class="inline-block text-white text-2xl md:text-3xl"
             >MediaForProspects</a
           >
         </div>
       </div>
     </header>
     <main>
-      <section class="hero-area py-12">
+      <section class="hero-area py-8 md:py-12">
         <div class="container">
-          <div class="hero-content text-center mb-10 max-w-[1150px] mx-auto">
-            <h1 class="text-3xl font-bold text-secondary">
+          <div
+            class="hero-content text-center mb-6 md:mb-10 max-w-[1150px] mx-auto"
+          >
+            <h1 class="text-2xl md:text-3xl font-bold text-secondary">
               Attention Coaches: We help you get an endless flow of
               appointements on autopilot by becoming an authority in your Niche
               on Youtube.
             </h1>
           </div>
-          <!-- <video
-            id="heroPlayer"
-            playsinline
-            controls
-            data-poster="./src/images/poster-1.webp"
-          >
-            <source src="./src/videos/video-1.mp4" type="video/mp4" />
-          </video> -->
           <div class="plyr__video-embed hero-player">
             <iframe
               src="https://player.vimeo.com/video/838873125?h=c2429c86f4"
@@ -96,9 +92,11 @@
           </div>
         </div>
       </section>
-      <section class="benefits-area relative overflow-hidden pb-16 pt-20">
+      <section
+        class="benefits-area relative overflow-hidden md:pb-16 pt-5 md:pt-10"
+      >
         <svg
-          class="trans-bg absolute w-full start-0 end-0"
+          class="trans-bg absolute w-full start-0 end-0 hidden lg:block"
           width="1366"
           height="145"
           viewBox="0 0 1366 145"
@@ -112,12 +110,14 @@
           ></path>
         </svg>
         <div class="container relative z-10">
-          <div class="text-center mb-16">
-            <h2 class="text-4xl text-primary font-bold mb-3">
+          <div class="text-center mb-7 md:mb-16">
+            <h2 class="text-2xl md:text-4xl text-primary font-bold mb-3">
               Why Your Business Needs YouTube?
             </h2>
           </div>
-          <div class="block md:grid md:grid-cols-3 gap-8">
+          <div
+            class="block space-y-8 lg:space-y-0 lg:grid lg:grid-cols-3 lg:gap-8"
+          >
             <div
               class="bg-gradient-to-r from-secondary to-tertiary rounded-xl p-7 shadow-one"
             >
@@ -141,10 +141,10 @@
                 </svg>
               </div>
               <div>
-                <h4 class="text-white font-bold text-3xl mb-4">
+                <h4 class="text-white font-bold text-2xl md:text-3xl mb-4">
                   Become an Authority
                 </h4>
-                <p class="text-white text-lg">
+                <p class="text-white text-bae md:text-lg">
                   When you build your own YouTube channel, you tap into a
                   powerful source of trust and authority. This is what makes it
                   so much easier to attract and sign new clients. It's truly
@@ -288,10 +288,10 @@
                 </svg>
               </div>
               <div>
-                <h4 class="text-white font-bold text-3xl mb-4">
+                <h4 class="text-white font-bold text-2xl md:text-3xl mb-4">
                   Get Leads & Clients On Autopilot
                 </h4>
-                <p class="text-white text-lg">
+                <p class="text-white text-base md:text-lg">
                   When you build your own YouTube channel, you tap into a
                   powerful source of trust and authority. This is what makes it
                   so much easier to attract and sign new clients. It's truly
@@ -387,10 +387,10 @@
                 </svg>
               </div>
               <div>
-                <h4 class="text-white font-bold text-3xl mb-4">
+                <h4 class="text-white font-bold text-2xl md:text-3xl mb-4">
                   Evergreen Effects
                 </h4>
-                <p class="text-white text-lg">
+                <p class="text-white text-base md:text-lg">
                   Unlike content posted on platforms like Facebook, LinkedIn,
                   Instagram, or Twitter, which tends to fade away within a few
                   hours or days, YouTube offers a distinct advantage. When you
@@ -406,14 +406,16 @@
           </div>
         </div>
       </section>
-      <section class="example-area py-24">
+      <section class="example-area py-16 md:py-24">
         <div class="container">
-          <div class="grid grid-cols-[1fr_1.5fr] gap-10 items-center">
+          <div
+            class="space-y-8 lg:space-y-0 lg:grid grid-cols-[1fr_1.5fr] gap-10 items-center"
+          >
             <div>
-              <h2 class="text-4xl text-primary font-bold mb-3">
+              <h2 class="text-2xl md:text-4xl text-primary font-bold mb-3">
                 Here is an example of our work!
               </h2>
-              <p class="text-lg">
+              <p class="text-base md:text-lg">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quisquam vitae praesentium sequi doloremque aut veniam!
               </p>
@@ -460,7 +462,7 @@
                   </div>
                 </div>
                 <div
-                  class="splide example-slider-thumbnail"
+                  class="splide example-slider-thumbnail mt-2.5"
                   aria-label="Example Slider Thumbnail"
                 >
                   <div class="splide__track">
@@ -499,14 +501,16 @@
           </div>
         </div>
       </section>
-      <section class="testimonial-area py-24 bg-primary">
+      <section class="testimonial-area py-16 md:py-24 bg-primary">
         <div class="container">
-          <div class="grid grid-cols-[1fr_1.5fr] gap-10 items-center">
+          <div
+            class="space-y-8 lg:space-y-0 lg:grid grid-cols-[1fr_1.5fr] gap-10 items-center"
+          >
             <div>
-              <h2 class="text-4xl text-white font-bold mb-3">
+              <h2 class="text-2xl md:text-4xl text-white font-bold mb-3">
                 Here is what our customers say about us!
               </h2>
-              <p class="text-lg text-white">
+              <p class="text-base lg:text-lg text-white">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quisquam vitae praesentium sequi doloremque aut veniam!
               </p>
