--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     
     <!-- Main Css -->
     
-    <script type="module" crossorigin src="/media_prospect/js/main-502ec1e8.js"></script>
-    <link rel="stylesheet" href="/media_prospect/css/index-d5d8a1e8.css">
+    <script type="module" crossorigin src="/media_prospect/js/main-29f3d268.js"></script>
+    <link rel="stylesheet" href="/media_prospect/css/index-419b45c5.css">
   </head>
   <body>
     <div
@@ -70,15 +70,15 @@
               allowfullscreen
             ></iframe>
           </div>
-          <div class="text-center mt-7">
+          <div class="text-center mt-6">
             <a
               href="#calendlyArea"
-              class="inline-flex items-center bg-primary px-5 py-4 text-lg text-white cursor-pointer rounded-md uppercase font-bold leading-tight hover:bg-secondary transition duration-200"
+              class="inline-flex items-center bg-primary px-5 md:px-6 py-5 text-lg md:text-2xl text-white cursor-pointer rounded-md uppercase font-bold leading-tight hover:bg-secondary transition duration-200"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 enable-background="new 0 0 24 24"
                 viewBox="0 0 24 24"
-                class="w-6 h-6 mr-3"
+                class="w-7 md:w-8 h-7 md:h-8 mr-4"
               >
                 <path
                   fill="#fff"
@@ -95,7 +95,7 @@
         </div>
       </section>
       <section
-        class="benefits-area relative overflow-hidden md:pb-16 pt-5 md:pt-10"
+        class="benefits-area relative overflow-hidden lg:pb-16 pt-5 md:pt-10"
       >
         <svg
           class="trans-bg absolute w-full start-0 end-0 hidden lg:block"
@@ -408,21 +408,20 @@
           </div>
         </div>
       </section>
-      <section class="example-area py-16 md:py-24">
+      <section class="example-area py-16 md:pt-20 md:pb-24 xl:py-24">
         <div class="container">
-          <div
-            class="space-y-8 lg:space-y-0 lg:grid grid-cols-[1fr_1.5fr] gap-10 items-center"
-          >
-            <div>
+          <div class="space-y-8 lg:space-y-0 lg:flex items-center">
+            <div class="lg:pr-10 lg:w-2/5">
               <h2 class="text-2xl md:text-4xl text-primary font-bold mb-3">
                 Here is an example of our work!
               </h2>
               <p class="text-base md:text-lg">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam vitae praesentium sequi doloremque aut veniam!
+                These are some examples of high quality videos we made for our
+                clients to get them those hot leads every single month through
+                Youtube.
               </p>
             </div>
-            <div>
+            <div class="lg:w-3/5">
               <div class="carousel-wrap">
                 <div class="splide example-slider" aria-label="Example Slider">
                   <div class="splide__track">
@@ -460,6 +459,28 @@
                           ></iframe>
                         </div>
                       </li>
+                      <li class="splide__slide">
+                        <div class="plyr__video-embed yt-player-slider">
+                          <iframe
+                            src="https://www.youtube-nocookie.com/embed/LRI4Uln6uFI?si=rh7o0425YnsoVbvB"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen
+                          ></iframe>
+                        </div>
+                      </li>
+                      <li class="splide__slide">
+                        <div class="plyr__video-embed yt-player-slider">
+                          <iframe
+                            src="https://www.youtube-nocookie.com/embed/DzzOopReucw?si=yhPJPKlOIeAq7eW3"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen
+                          ></iframe>
+                        </div>
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -487,37 +508,40 @@
                           alt=""
                         />
                       </li>
+                      <li class="splide__slide">
+                        <img
+                          src="https://img.youtube.com/vi/LRI4Uln6uFI/maxresdefault.jpg"
+                          alt=""
+                        />
+                      </li>
+                      <li class="splide__slide">
+                        <img
+                          src="https://img.youtube.com/vi/DzzOopReucw/maxresdefault.jpg"
+                          alt=""
+                        />
+                      </li>
                     </ul>
                   </div>
                 </div>
               </div>
-              <!-- <video
-                class="video_player"
-                playsinline
-                controls
-                data-poster="./src/images/poster-1.webp"
-              >
-                <source src="./src/videos/video-1.mp4" type="video/mp4" />
-              </video> -->
             </div>
           </div>
         </div>
       </section>
       <section class="testimonial-area py-16 md:py-24 bg-primary">
         <div class="container">
-          <div
-            class="space-y-8 lg:space-y-0 lg:grid grid-cols-[1fr_1.5fr] gap-10 items-center"
-          >
-            <div>
+          <div class="space-y-8 lg:space-y-0 lg:flex items-center">
+            <div class="lg:pr-10 lg:w-2/5">
               <h2 class="text-2xl md:text-4xl text-white font-bold mb-3">
                 Here is what our customers say about us!
               </h2>
               <p class="text-base lg:text-lg text-white">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam vitae praesentium sequi doloremque aut veniam!
+                Steven Wilson and his brother Eric run a bitcoin mining company
+                in Iowa and through our Youtube service we were able to help
+                them pre-sell all of their slots.
               </p>
             </div>
-            <div>
+            <div class="lg:w-3/5">
               <div class="plyr__video-embed yt-player">
                 <iframe
                   src="https://player.vimeo.com/video/874513984?h=231b54696d"
