header logo alignment fix

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </div>
     <header
-      class="py-3 bg-primary h-16 sticky top-0 w-full left-0 right-0 z-20"
+      class="py-3 bg-primary h-16 flex items-center justify-center sticky top-0 w-full left-0 right-0 z-20"
     >
       <div class="container">
         <div class="text-center">
