--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="/media_prospect/assets/others/favicon-c0df4d75.ico"
+      href="./assets/others/favicon-c0df4d75.ico"
       type="image/x-icon"
     />
     <title>Media For Prospects</title>
@@ -21,8 +21,8 @@
     
     <!-- Main Css -->
     
-    <script type="module" crossorigin src="/media_prospect/js/main-29f3d268.js"></script>
-    <link rel="stylesheet" href="/media_prospect/css/index-419b45c5.css">
+    <script type="module" crossorigin src="./js/main-29f3d268.js"></script>
+    <link rel="stylesheet" href="./css/index-419b45c5.css">
   </head>
   <body>
     <div
