--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   
   <!-- Main Css -->
   
-  <script type="module" crossorigin src="./js/main-ff03cfd0.js"></script>
-  <link rel="stylesheet" href="./css/index-619bebc2.css">
+  <script type="module" crossorigin src="./js/main-ce0d7e4b.js"></script>
+  <link rel="stylesheet" href="./css/index-bb34a45f.css">
 </head>
 
 <body class="font-primary">
@@ -43,8 +43,9 @@
       <div class="container">
         <div class="hero-content text-center mb-6 md:mb-8 max-w-[1150px] mx-auto">
           <h1 class="text-2xl md:text-3xl lg:text-[34px] font-bold text-primary font-secondary">
-            Attention Coaches: We help you get an endless flow of
-            appointements on autopilot by becoming an authority in your Niche
+            Attention Coaches: <br> We help you get an endless flow of
+            <span class="text-yellow-400">appointments</span> on autopilot <br> by becoming an in <span
+              class="text-yellow-400">authority</span> your Niche
             on Youtube.
           </h1>
         </div>
