--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div class="container">
         <div class="hero-content text-center mb-6 md:mb-8 max-w-[1150px] mx-auto">
           <h1 class="text-2xl md:text-3xl lg:text-[34px] font-bold text-primary font-secondary">
-            Attention Coaches: We help you get an endless flow of
-            appointements on autopilot by becoming an authority in your Niche
+            Attention Coaches: <br> We help you get an endless flow of
+            <span class="text-yellow-400">appointments</span> on autopilot <br class="hidden xl:block"> by becoming an in <span class="text-yellow-400">authority</span> your Niche
             on Youtube.
           </h1>
         </div>
