--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           </div>
           <div class="plyr__video-embed hero-player">
             <iframe
-              src="https://www.youtube.com/watch?v=b41Q2qhQZuc&feature=youtu.be"
-              title="YouTube video player"
+              src="https://player.vimeo.com/video/888190770?h=3511fd2f06"
+              title="vimeo-player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
@@ -547,14 +547,59 @@
               </p>
             </div>
             <div class="lg:w-3/5">
-              <div class="plyr__video-embed yt-player">
-                <iframe
-                  src="https://www.youtube.com/watch?v=e8Wyj86h20w"
-                  title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  allowfullscreen
-                ></iframe>
+              <div class="carousel-wrap">
+                <div
+                  class="splide testimonial-slider"
+                  aria-label="Example Slider"
+                >
+                  <div class="splide__track">
+                    <ul class="splide__list">
+                      <li class="splide__slide">
+                        <div class="plyr__video-embed yt-player-slider">
+                          <iframe
+                            src="https://www.youtube.com/embed/e8Wyj86h20w?si=xBguEfUiMg1HKr_v"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen
+                          ></iframe>
+                        </div>
+                      </li>
+                      <li class="splide__slide">
+                        <div class="plyr__video-embed yt-player-slider">
+                          <iframe
+                            src="https://www.youtube-nocookie.com/embed/xM8sqD37FUw?si=cAcFrH4xjLmvlYhn"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen
+                          ></iframe>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div
+                  class="splide testimonial-slider-thumbnail mt-2.5"
+                  aria-label="Testimonial Slider Thumbnail"
+                >
+                  <div class="splide__track">
+                    <ul class="splide__list">
+                      <li class="splide__slide">
+                        <img
+                          src="https://img.youtube.com/vi/e8Wyj86h20w/maxresdefault.jpg"
+                          alt=""
+                        />
+                      </li>
+                      <li class="splide__slide">
+                        <img
+                          src="https://img.youtube.com/vi/xM8sqD37FUw/maxresdefault.jpg"
+                          alt=""
+                        />
+                      </li>
+                    </ul>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
