testimonial video added

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                   viewBox="0 0 18 16"
                 >
                   <path
-                    stroke="currentColor"
+                    stroke="#fff"
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="1"
@@ -568,7 +568,7 @@
                       <li class="splide__slide">
                         <div class="plyr__video-embed yt-player-slider">
                           <iframe
-                            src="https://www.youtube-nocookie.com/embed/xM8sqD37FUw?si=cAcFrH4xjLmvlYhn"
+                            src="https://www.youtube.com/embed/wxNIWb8MoHM?si=rSH-4RZZBQ-sJM_2"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -593,7 +593,7 @@
                       </li>
                       <li class="splide__slide">
                         <img
-                          src="https://img.youtube.com/vi/xM8sqD37FUw/maxresdefault.jpg"
+                          src="https://img.youtube.com/vi/wxNIWb8MoHM/maxresdefault.jpg"
                           alt=""
                         />
                       </li>
